# anki-insights

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  anki_mandarin_dedup_report.csv  anki_token_dedup_report.csv  mypy.ini  pyproject.toml  requirements-lock.txt  requirements.txt  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci-cache.yml  ci.yml  docs.yml  release.yml
anki_insights/cli/: cli.py
anki_insights/core/: anki.py  deduplicate.py  invert.py
anki_insights/io/: html_utils.py
backup/2026-03-10_17-32-10/: copied_notes_payload.json  run_summary.json  source.tsv  source_notes.json
bench/: benchmark_dedup.py
deduplicate/: anki_deduplicate_indonesian.py  anki_deduplicate_mandarin.py  anki_deduplicate_spanish.py
docs/: api_reference.md  contributing.md  getting_started.md  index.md  mkdocs.yml
docs/api/: deduplicate.md  (+2 more)
examples/: README.md  dedup_example.py
invert/: anki_invert_notes_from_src_deck_to_tgt_deck.py
reports/: dedup_en_report.csv  dedup_id_report.csv  id_tokens.json
scripts/: anki_deduplicate_indonesian.py  anki_deduplicate_japanese.py  anki_deduplicate_mandarin.py  anki_deduplicate_spanish.py  anki_indonesian_dedup_report.csv  anki_invert_notes_from_src_deck_to_tgt_deck.py  anki_japanese_token_dedup_report.csv  anki_spanish_dedup_report.csv  anki_token_dedup_report.csv  playground.py
tests/: test_deduplicate.py  test_invert.py  test_tokenizers.py
(+151 files in other folders)
